# GameEngine2D

./: README.md  pyproject.toml
src/AppEngine/: Engine.py  InputSystem.py  Object.py  RenderSystem.py  Texture.py  __init__.py
tests/: Engine.py  __init__.py
