[build-system]
requires = ["setuptools>=75.1.0"]
build-backend = "setuptools.build_meta"


[project]
name = "AppEngine"
version = "1.1.0"
description = "This module contain many processes for creating apps."

readme = "README.md"
license = {file="LICENSE"}

requires-python = ">=3.12"
dependencies = [
   "CodingTools2@git+https://github.com/AtoKashinoki/CodingTools2"
]

authors = [
   {name="AtoKashinoki", email="atokashinoki@gmail.com"}
]
classifiers = [
   "Programming Language :: Python :: 3.12",
   "License :: OSI Approved :: MIT license",
   "Operating System :: Microsoft :: Windows :: Windows 11"
]


[project.urls]
"Homepage" = "https://github.com/AtoKashinoki/AppEngine"
"Bug Tracker" = "https://github.com/AtoKashinoki/AppEngine/issues"


[project.scripts]
